<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.initvent.janitorsystem.MainActivity" >

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spnBuilding"
        android:layout_alignParentTop="true"
        android:text="@string/btn_settings" />

    <Button
        android:id="@+id/btnMaster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnSettings"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_master" />

    <Button
        android:id="@+id/btnNewInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/spnBuilding"
        android:layout_below="@+id/spnBuilding"
        android:layout_marginTop="19dp"
        android:text="@string/new_info" />

    <Button
        android:id="@+id/btnNewTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnNewInfo"
        android:layout_alignBottom="@+id/btnNewInfo"
        android:layout_alignLeft="@+id/spnBuilding"
        android:text="@string/new_task" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/textLayout"
        android:layout_below="@+id/textView1" >
	
	<TextView
	    android:id="@+id/textView3"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:layout_weight="3"	    	    
	    android:text="Heading" />
	<TextView
	    android:id="@+id/textView4"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:layout_weight="2"	    	    
	    android:text="Note" />
		<TextView
	    android:id="@+id/textView5"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:layout_weight="2"	    	    
	    android:text="Create" />
		<TextView
	    android:id="@+id/textView6"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:layout_weight="2"	    	    
	    android:text="User" />
			
	</LinearLayout>
	<View 
	   android:layout_width="fill_parent"
	   android:layout_height="1dp"       
	   android:background="#006432"
	   android:layout_below="@+id/textLayout" />
	
    <ListView
        android:id="@+id/lvTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnNewTask"
        android:layout_below="@+id/btnNewTask"
        android:layout_marginTop="70dp" >
    </ListView>

    <Spinner
        android:id="@+id/spnBuilding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnSettings"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnNewTask"
        android:layout_marginTop="15dp"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:text="Task List" />
	<View 
	   android:layout_width="fill_parent"
	   android:layout_height="1dp"       
	   android:background="#006432"
	   android:layout_below="@+id/textView1" />

	 <EditText
	     android:id="@+id/ searchSpinner"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:layout_alignTop="@+id/btnMaster"
	     android:layout_toRightOf="@+id/btnMaster"
	     android:text="TextView" />

</RelativeLayout>